--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,9 @@ jobs:
 
         with:
 
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: anisha1607
 
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: Anisha@16
 
       -
 
@@ -52,4 +52,4 @@ jobs:
 
           push: true
 
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
+          tags: anisha1607:latest
